@@ -242,6 +242,7 @@ Fixes:
    * Fix navifame to recover the focus for the prev page when top item is deleted.
    * Up/down step of hour decimal of elm_clock is changed to 12 not to touch hour unit at editing mode.
    * Remove the keyboard area in the conformant if the keyboard state is off.
+   * Fix colorselector send "changed" signal twice when pressed color bar.
 
 Removals:
 
